--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             <h1>Links</h1>
             <div class="m1">
                 <p class="p1"> Email</p>
-                <img src="/img/email.png" alt="">
+                <img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-email-512.png" alt="">
             </div>
             <div class="m2">
                 <p class="p2"> Facebook</p>
-                <img src="/img/fbl.png" alt="">
+                <img src="https://cdn-icons-png.flaticon.com/512/59/59439.png" alt="">
             </div>
             <div class="m3">
                 <p class="p3"> Instagram</p>
-                <img src="/img/inst.png" alt="">
+                <img src="https://img.icons8.com/ios11/600/000000/instagram-new.png" alt="">
             </div>
 
             <div class="m4">
                 <p class="p4">Github</p>
-                <img src="/img/github.webp" alt="">
+                <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="">
             </div>
 
         </div>
